# mechaphlowers

./: .gitignore  .readthedocs.yaml  Makefile  README.md  mkdocs.yaml  mkdocs_rtd.yaml  profile_balance.py  pyproject.toml  sonar-project.properties  version.py
.github/workflows/: check-ci.yml  dev-ci.yml  publish.yml  test-release-ci.yml
.pdm-build/: pyproject.toml
.pdm-build/src/mechaphlowers/: _version.py
docs/: index.md  mkdocs.yaml  mkdocs_rtd.yaml
docs/developer_guide/: benchmark_mode.md  documentation.md  guidelines.md  logging.md  publish.md  tests.md
docs/docs/developer_guide/: documentation.md
docs/docs/docstring/: welcome.md
docs/docs/user_guide/: ug_general_concepts.md
docs/docstring/: config.md  welcome.md
docs/docstring/api/: frames.md  section_study.md
docs/docstring/data/: catalog.md  measures.md
docs/docstring/entities/: arrays.md  data_container.md  equipment.md  errors.md  frames.md  geography.md  schemas.md  shapes.md
docs/docstring/plotting/: distance.md  plot.md
docs/user_guide/: pa_modules.md  ug_balance_engine.md  ug_cable_model.md  ug_catalog.md  ug_configuration.md  ug_coordinates_system.md  ug_deformation.md  ug_distances.md  ug_general_concepts.md  ug_geography.md  ug_guying.md  ug_input.md  ug_maps.md  ug_measures.md  ug_modules.md  ug_mph_errors.md  ug_obstacles.md  ug_parameter_15_degrees.md  ug_parameter_calibration.md  ug_plotting.md  ug_rrts.md  ug_sag_tension_calc.md  ug_section_study.md  ug_state_change.md  ug_thermal_engine.md  ug_wind_speed_conversion.md
docs/user_guide/assets/: how_span_engine_work.json
src/mechaphlowers/: __init__.py  _version.py  config.py  exceptions.py  utils.py
src/mechaphlowers/api/: __init__.py  frames.py  section_study.py  state.py
src/mechaphlowers/core/: manipulation.py
src/mechaphlowers/data/: catalog.py  iris_dataset.csv  measures.py  pokemon.yaml  sample_cable_database.csv  sample_cable_database.yaml  section_import_from_proto_utf8.csv  test.ipynb  units.py
src/mechaphlowers/entities/: __init__.py  arrays.py  core.py  data_container.py  equipment.py  errors.py  frames.py  geography.py  reactivity.py  schemas.py  shapes.py
src/mechaphlowers/numeric/: analytical_cubic.py  cubic.py  cubic_interface.py  eigval_batch_lapack.py
src/mechaphlowers/plotting/: __init__.py  distances.py  elevation.py  filter.py  geo.py  helper.py  plot.py  plot_config.py  plot_distances.py  reseau-aerien-haute-tension-htb-corse copy.json  reseau-aerien-haute-tension-htb-corse-with-elevation.json  utils.py
test/: conftest.py  perf_utils.py  test_benchmarks.py  test_config.py  test_functions.py  test_log.py  test_release.py  test_uc.py  test_utils.py  utils.py
test/api/: test_frames.py  test_section_study.py  test_state.py
test/balance/: test_balance_numeric.py  test_elements.py  test_elements_2D.py  test_elements_integration.py  test_profiling.py
test/benchmark/: benchmark_cubic.py  benchmark_cubic_vs_eigval.py  profile_balance.py  test_benchmarks.py  test_model_ducloux_profiling.py
test/core/: test_manipulation.py  test_numeric.py
test/core/geometry/: angles_with_frames.ipynb  test_distances.py  test_frame.py  test_line_angles.py  test_line_angles_integration.py  test_plane.py  test_points.py  test_points_balance_engine.py  test_position_engine.py  test_reference.py  test_rotation.py
test/core/models/: test_cable_deformation_models.py  test_cable_extension_model.py  test_cable_models.py  test_copy_methods.py  test_external_loads.py  test_external_loads_integration.py  test_external_loads_intergration.py  test_guying.py  test_mecha_cable_extension_model copy.py  test_physics_base_cable_model.py  test_physics_based_cable_model.py  test_physics_based_cable_models.py  test_sag_tension_calculation.py  test_space_position_cable_models.py
test/data/: test_catalog.py  test_measures.py  test_measures_integration.py  test_units.py
test/entities/: test_arrays.py  test_cable_array.py  test_core.py  test_data_container.py  test_equipment.py  test_frames.py  test_geography.py  test_obstacle_array.py  test_rrts.py  test_section_array.py  test_shapes.py  test_weather_array.py
test/numeric/: test_balance_engine_cubic_solver_consistency.py  test_cubic.py  test_cubic_solver_consistency.py  test_eigval_batch_lapack.py  test_scipy.py
test/plotting/: test_line3d.py  test_plot.py  test_plot_loads.py  test_plot_obstacles.py  test_plot_planes.py  test_plot_reactivty.py
test/tools/: plot_tools.py
(+132 files in other folders)
