[tool.poetry]
name = "mechaphlowers"
version = "0.0.0"  
description = "Physical calculation package for the mechanics and geometry of power lines"
authors = ["Adrien Goeller","Aimee Quinaou"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
mypy = "^1.11.2"
ipython = "^8.26.0"
ipykernel = "^6.29.5"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
unittest-xml-reporting = "^3.2.0"
poethepoet = "^0.29.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

### Tools configuration

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.mypy]
exclude = [
    "virtualenv",
]

[tool.poe.tasks]
check-format = "poetry run ruff format --check"
format = "poetry run ruff format"
lint = "poetry run ruff check"
lint-fix = "poetry run ruff check --fix"
typing = "poetry run mypy ."
test = "poetry run pytest"
test-coverage = "poetry run pytest --cov-report xml --cov=mechaphlowers test/"
checks = [
    "check-format",
    "lint",
    "typing",
    "test",
]

## Test framework
[tool.pytest.ini_options]
junit_family = "xunit2"

[tool.coverage.run]
source = ['src']
relative_files = true

## Task configurator
[tool.poe]
verbosity = -1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
