[project]
name = "mechaphlowers"
dynamic = ["version"]  
description = "Physical calculation package for the mechanics and geometry of power lines"
authors = [{name = "Adrien Goeller"}, {name = "Aimee Quinaou"}, {name = "Jeremy Wang"}]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",

    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy<=2.0.2",
    "pandas<=2.2.3",
    "pandera<=0.21.1",
    "plotly<=5.24.1",
    "multimethod<2.0",
]

[project.urls]
Homepage = "https://github.com/phlowers/mechaphlowers"
Issues = "https://github.com/phlowers/mechaphlowers/issues"
Documentation = "https://phlowers.readthedocs.io/projects/mechaphlowers/"

[project.optional-dependencies]
full = ["scipy<=1.14.1"]

[dependency-groups]
dev = [
    "ruff==0.6.1",
    "mypy==1.11.2",
    "ipython==8.26.0",
    "ipykernel==6.29.5",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "unittest-xml-reporting==3.2.0",
    "pandas-stubs==2.2.3.241009",
    "scipy<=1.14.1"
]
test = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    ]
docs = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.26.2",
    "mkdocs-material==9.5.43",
    "mkdocs-jupyter==0.25.1"
    ]

all = [
    { include-group = 'dev' },
    { include-group = 'docs' },
    { include-group = 'test' },
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


### Tools configuration

[tool.pdm]
version = { source = "scm", version_format = "pdm_build:format_version"}
distribution = true


[tool.ruff]
target-version = "py311"
line-length = 79


[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
docstring-code-line-length = 79
indent-style = "space"
quote-style = "preserve"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{test,docs,tools}/*" = ["E402"]

[tool.mypy]
exclude = [
    "virtualenv", ".venv*", "build", "dist", "site-packages", "tests", "docs", "doc", "examples", "example"
]

## Test framework
[tool.pytest.ini_options]
junit_family = "xunit2"
filterwarnings = [
    "ignore::DeprecationWarning",
    # Following warning seems to come from an issue in pandera,
    # see https://github.com/unionai-oss/pandera/issues/1845
    'ignore:use `parametric(<base>, <func>)` as a type instead',
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ['src']
relative_files = true
